Image not showing bug fixed.
Images/Banner.jpg

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h6 {
 
 /* Header Start */
 header {
-  background: url(Images/banner.jpg);
+  background: url(Images/Banner.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
